--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"@sveltejs/adapter-vercel": "^5.6.3",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/package": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
@@ -45,6 +45,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.3.2",
 		"svelte": "^5.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^4.1.3",
 		"typescript": "^5.3.2",
 		"vite": "^6.2.5"
