--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
 		"@dnd-kit/sortable": "^10.0.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"autoprefixer": "^10.4.21",
+		"dom-to-image-more": "^3.5.0",
+		"html2canvas": "^1.4.1",
 		"postcss": "^8.5.3",
 		"uuid": "^11.1.0"
 	}
